--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: COVID-19 information
-description: "Timelines about COVID-19 information"
+title: Chinese history timeline
+description: "Timelines of Chinese history"
 year: 2021
 author: Gary Guo
 # add search box to navbar, true/false
